--- a/src/about.ui
+++ b/src/about.ui
@@ -9,16 +9,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>435</width>
+    <width>467</width>
     <height>244</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>About KDiskMark</string>
-  </property>
-  <property name="windowIcon">
-   <iconset>
-    <normaloff>kdiskmark.svg</normaloff>kdiskmark.svg</iconset>
   </property>
   <property name="autoFillBackground">
    <bool>false</bool>
@@ -37,7 +33,7 @@
     <rect>
      <x>140</x>
      <y>20</y>
-     <width>281</width>
+     <width>311</width>
      <height>161</height>
     </rect>
    </property>
@@ -58,7 +54,7 @@
      <rect>
       <x>10</x>
       <y>10</y>
-      <width>111</width>
+      <width>141</width>
       <height>18</height>
      </rect>
     </property>
@@ -69,7 +65,7 @@
    <widget class="QLabel" name="label_Version">
     <property name="geometry">
      <rect>
-      <x>130</x>
+      <x>160</x>
       <y>10</y>
       <width>131</width>
       <height>18</height>
@@ -84,7 +80,7 @@
      <rect>
       <x>10</x>
       <y>50</y>
-      <width>111</width>
+      <width>141</width>
       <height>18</height>
      </rect>
     </property>
@@ -95,7 +91,7 @@
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>130</x>
+      <x>160</x>
       <y>50</y>
       <width>58</width>
       <height>18</height>
@@ -110,7 +106,7 @@
      <rect>
       <x>10</x>
       <y>70</y>
-      <width>111</width>
+      <width>141</width>
       <height>18</height>
      </rect>
     </property>
@@ -121,7 +117,7 @@
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>130</x>
+      <x>160</x>
       <y>70</y>
       <width>58</width>
       <height>18</height>
@@ -136,7 +132,7 @@
      <rect>
       <x>10</x>
       <y>90</y>
-      <width>111</width>
+      <width>141</width>
       <height>18</height>
      </rect>
     </property>
@@ -147,7 +143,7 @@
    <widget class="QLabel" name="label_Autor">
     <property name="geometry">
      <rect>
-      <x>130</x>
+      <x>160</x>
       <y>90</y>
       <width>61</width>
       <height>18</height>
@@ -168,7 +164,7 @@
      <rect>
       <x>10</x>
       <y>110</y>
-      <width>111</width>
+      <width>141</width>
       <height>18</height>
      </rect>
     </property>
@@ -179,7 +175,7 @@
    <widget class="QLabel" name="label_Email">
     <property name="geometry">
      <rect>
-      <x>130</x>
+      <x>160</x>
       <y>110</y>
       <width>141</width>
       <height>18</height>
@@ -200,7 +196,7 @@
      <rect>
       <x>10</x>
       <y>30</y>
-      <width>121</width>
+      <width>141</width>
       <height>18</height>
      </rect>
     </property>
@@ -211,7 +207,7 @@
    <widget class="QLabel" name="label_FIO">
     <property name="geometry">
      <rect>
-      <x>130</x>
+      <x>160</x>
       <y>30</y>
       <width>111</width>
       <height>18</height>
@@ -226,7 +222,7 @@
      <rect>
       <x>10</x>
       <y>130</y>
-      <width>111</width>
+      <width>141</width>
       <height>18</height>
      </rect>
     </property>
@@ -237,7 +233,7 @@
    <widget class="QLabel" name="label_IconAutor">
     <property name="geometry">
      <rect>
-      <x>130</x>
+      <x>160</x>
       <y>130</y>
       <width>91</width>
       <height>18</height>
@@ -251,7 +247,7 @@
     </property>
    </widget>
   </widget>
-  <widget class="QLabel" name="label_8">
+  <widget class="QLabel" name="label_Icon">
    <property name="geometry">
     <rect>
      <x>10</x>
@@ -272,7 +268,7 @@
     <rect>
      <x>0</x>
      <y>190</y>
-     <width>421</width>
+     <width>451</width>
      <height>41</height>
     </rect>
    </property>
