--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -38,9 +38,15 @@
      <rect>
       <x>110</x>
       <y>10</y>
-      <width>42</width>
+      <width>31</width>
       <height>31</height>
      </rect>
+    </property>
+    <property name="readOnly">
+     <bool>false</bool>
+    </property>
+    <property name="accelerated">
+     <bool>false</bool>
     </property>
     <property name="minimum">
      <number>1</number>
@@ -55,9 +61,9 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>160</x>
+      <x>150</x>
       <y>10</y>
-      <width>101</width>
+      <width>81</width>
       <height>31</height>
      </rect>
     </property>
@@ -68,14 +74,14 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>270</x>
+      <x>240</x>
       <y>10</y>
-      <width>161</width>
+      <width>211</width>
       <height>31</height>
      </rect>
     </property>
     <property name="editable">
-     <bool>true</bool>
+     <bool>false</bool>
     </property>
    </widget>
    <widget class="QProgressBar" name="readBar_SEQ1M_Q8T1">
@@ -172,9 +178,9 @@ Q8T1</string>
     </property>
     <property name="geometry">
      <rect>
-      <x>440</x>
+      <x>458</x>
       <y>10</y>
-      <width>79</width>
+      <width>61</width>
       <height>31</height>
      </rect>
     </property>
