Benchmark file size

--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -55,9 +55,9 @@
      <number>9</number>
     </property>
    </widget>
-   <widget class="QComboBox" name="comboBox">
+   <widget class="QComboBox" name="comboBox_fileSize">
     <property name="enabled">
-     <bool>false</bool>
+     <bool>true</bool>
     </property>
     <property name="geometry">
      <rect>
