--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -108,7 +108,7 @@
      <string>%v</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label">
+   <widget class="QLabel" name="label_Read">
     <property name="geometry">
      <rect>
       <x>110</x>
@@ -118,7 +118,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>&lt;p align=&quot;center&quot;&gt;Read [MiB/s]&lt;/p&gt;</string>
+     <string>Read</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton_SEQ_1">
@@ -158,7 +158,7 @@
      <string>%v</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_2">
+   <widget class="QLabel" name="label_Write">
     <property name="geometry">
      <rect>
       <x>340</x>
@@ -168,7 +168,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>&lt;p align=&quot;center&quot;&gt;Write [MiB/s]&lt;/p&gt;</string>
+     <string>Write</string>
     </property>
    </widget>
    <widget class="QComboBox" name="comboBox_ComparisonField">
